# OpenEASD

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PRD.md  README.md  SECURITY.md  demo.html  docker-compose.yml  docker-entrypoint.sh  fly.toml  ieee.md  install.sh  main.py  manage.py  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_tool.yml
.github/workflows/: ci.yml  codeql.yml  refresh-backports.yml
NEW: apps/takeover_check/: apps.py
apps/alerts/: admin.py  dispatcher.py  models.py
apps/alterx/: analyzer.py  apps.py  collector.py  models.py  scanner.py
apps/amass/: admin.py  analyzer.py  apps.py  collector.py  models.py  scanner.py
apps/cloud_assets/: analyzer.py  apps.py  collector.py  models.py  scanner.py
apps/core/: admin.py  apps.py  constants.py  exceptions.py  models.py  queries.py  scheduler.py  urls.py  views.py
apps/cve_intel/: analyzer.py  apps.py  collector.py  models.py  scanner.py
apps/dns_analyzer/: admin.py  apps.py  models.py  scanner.py
apps/dnsx/: admin.py  analyzer.py  apps.py  collector.py  models.py  scanner.py
apps/domain_security/: apps.py  models.py  scanner.py
apps/domains/: views.py
apps/email_security/: admin.py  apps.py  models.py  scanner.py
apps/gowitness/: analyzer.py  apps.py  collector.py  scanner.py
apps/historical_urls/: analyzer.py  apps.py  collector.py  models.py  scanner.py
apps/httpx/: admin.py  analyzer.py  apps.py  collector.py  models.py  scanner.py
apps/insights/: admin.py  builder.py  models.py  views.py
apps/katana/: analyzer.py  apps.py  collector.py  models.py  scanner.py
apps/naabu/: admin.py  analyzer.py  apps.py  collector.py  models.py  scanner.py
apps/nmap/: admin.py  analyzer.py  apps.py  backports.json  backports.py  collector.py  models.py  scanner.py
apps/nuclei/: admin.py  analyzer.py  apps.py  collector.py  models.py  scanner.py
apps/nuclei_network/: analyzer.py  apps.py  collector.py  scanner.py
apps/s3_enum/: analyzer.py  apps.py  collector.py  scanner.py
apps/scans/: admin.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/ssh_checker/: analyzer.py  apps.py  collector.py  scanner.py
apps/ssl_checker/: admin.py  analyzer.py  apps.py  collector.py  models.py  scanner.py
apps/subfinder/: admin.py  analyzer.py  apps.py  collector.py  models.py  scanner.py
apps/takeover_check/: analyzer.py  apps.py  collector.py  models.py  scanner.py
apps/tls_checker/: analyzer.py  apps.py  collector.py  scanner.py
apps/web_checker/: analyzer.py  apps.py  collector.py  scanner.py
apps/workflow/: apps.py  models.py  runner.py  views.py
config/: nuclei_templates.yaml  severity_mapping.yaml
data/: huey.db-shm  huey.db-wal
docker/: .dockerignore  Dockerfile  docker-compose.override.yml  docker-compose.yml  entrypoint.sh
docs/: DECISIONS.md  DESIGN.md  PRD.md
docs/discussions/: 01-welcome.md  02-qa-starter.md  03-show-and-tell-prompt.md  README.md
docs/specs/: 2026-06-01-cloud-assets-design.md  2026-06-01-cloud-assets-plan.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  auth.js  index.css  main.jsx  router.jsx
k8s/: configmap.yaml  deployment-web.yaml  deployment-worker.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
openeasd/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
prefect_flows/: alert_flow.py  daily_scan_flow.py  weekly_scan_flow.py
src/core/: config_manager.py  database.py  delta_detector.py  orchestrator.py
src/utils/: mitre_mapper.py  result_parser.py  tool_wrapper.py
templates/: base.html  dashboard.html  health.html  insights.html
templates/domains/: list.html
templates/findings/: list.html
templates/partials/: finding_status_cell.html  pagination.html  risk_badge.html  scan_rows.html  scan_status.html  severity_badge.html  status_badge.html  vuln_rows.html
templates/registration/: login.html
templates/reports/: scan_report.html
templates/scans/: detail.html  list.html  scheduled.html  start.html
templates/vulnerabilities/: list.html
templates/workflow/: create.html  detail.html  list.html
tests/: conftest.py  test_api_endpoints.py  test_backports_refresh.py
tests/integration/: test_scan_flow.py
tests/test_data/: sample_domains.yaml
tests/unit/: test_alerts.py  test_alpine_secdb.py  test_alterx.py  test_amass.py  test_assets.py  test_cloud_assets.py  test_config_manager.py  test_core.py  test_cve_intel.py  test_database.py  test_dnsx.py  test_domain_authorization.py  test_domain_security.py  test_domains.py  test_historical_urls.py  test_httpx.py  test_insights.py  test_insights_builder.py  test_jwt_auth.py  test_k8s_manifests.py  test_naabu.py  (+24 more)
(+228 files in other folders)
