[project]
name = "openeasd"
version = "1.0.0"
description = "OpenEASD - Automated External Attack Surface Detection"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Rathnakara G N", email = "contact@cybersecify.com"},
]
dependencies = [
    # Web framework
    "django>=5.2.14",
    "django-ninja>=1.6.2",
    # Configuration
    "python-decouple>=3.8",
    # DNS / network
    "dnspython>=2.4",
    "requests>=2.31",
    "pyyaml>=6.0",
    # Scheduler
    "django-apscheduler>=0.7.0",
    # SSL / crypto / SSH
    "cryptography>=42.0",
    "paramiko>=5.0.0",
    # Reports (PDF generation)
    "xhtml2pdf>=0.2.15",
    # Task queue
    "django-q2>=1.6",
    # XML parsing (safe)
    "defusedxml>=0.7.1",
    # Auth
    "django-ninja-jwt>=5.0",
    "whitenoise>=6.7",
    "lxml>=6.1.0",
    "pypdf>=6.10.2",
    "urllib3>=2.7.0",
    "idna>=3.15",
]

[project.optional-dependencies]
prod = [
    "gunicorn>=21.2",
]

[project.scripts]
openeasd = "apps.core.scans.management.commands.run_scan:Command"
openeasd-daily = "apps.core.scans.management.commands.run_daily_scan:Command"
openeasd-weekly = "apps.core.scans.management.commands.run_weekly_scan:Command"

[tool.setuptools.packages.find]
include = ["apps*", "openeasd*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "black>=23.11",
    "ruff>=0.4",
    "mypy>=1.7",
    "isort>=5.12",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "openeasd.settings"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
